# milei-twitter

./: .dockerignore  .gitattributes  .gitignore  .prettierrc  CLAUDE.md  Dockerfile  Dockerfile.scraper  Dockerfile.scraper-manzana  Dockerfile.sitio  POSTGRESQL_MIGRATION_FIXES.md  README.md  devbox.json  drizzle.config.ts  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json
.devcontainer/: Dockerfile
.zed/: settings.json
api/: consts.ts  package.json  schema.ts
benchmarks/: lastWeek.ts
chore/: litestream.yml
common/: package.json  parsearLinkDeTwitter.js
docker/: scraper-manzana.Dockerfile  scraper.Dockerfile  sitio.Dockerfile  twitter-bot.Dockerfile
drizzle/: 0000_far_toro.sql  0001_fluffy_steel_serpent.sql  0006_boring_betty_brant.sql  0006_rainy_mordo.sql  0006_shocking_trauma.sql  0007_brief_captain_flint.sql  0008_outgoing_swarm.sql
scraper/: drizzle.config.ts  index.ts  package.json  pnpm-lock.yaml  schema.ts  tsconfig.json
scraper-manzana/: .env.example  .gitignore  addAccounts.ts  browser-probe.ts  carpeteo.ts  cli.ts  cron-runner.ts  crontab  data.ts  ensure-rebrowser-patches.mjs  package.json  randomize-tls.ts  run-scraper-once.sh  scrape-milei-tweets.ts  scraper.ts  trigger.config.ts  tsconfig.json  tsup.config.ts  twitter-compat.ts
scraper-py/: .dockerignore  Dockerfile  crontab  fly.toml  pyproject.toml  readme.md
scraper-py/scraper-py/: __init__.py  db.py
scripts/: fetchTweetsAndReplies.ts
sitio/: .prettierignore  Justfile  components.json  drizzle.config.ts  package.json  (+8 more)
(+212 files in other folders)
