[tool.poetry]
name = "scraper-py"
version = "0.1.0"
description = ""
authors = ["Nulo <git@nulo.in>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
twscrape = {git = "https://github.com/catdevnull/twscrape"}
httpx = "^0.27.0"
aiosqlite = "^0.20.0"
nanoid = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
